--- a/gguda/main.html
+++ b/gguda/main.html
@@ -641,22 +641,22 @@
             flex-direction: column;
         }
 
-        .youtube p,
-        .youtube h2 {
+        .main p,
+        .main h2 {
             text-align: center;
         }
 
-        .youtube h2 {
+        .main h2 {
             font-size: 26px;
             font-family: 'SCoreDream';
         }
 
-        .youtube p {
+        .main p {
             font-size: 16px;
             margin-bottom: 20px;
         }
 
-        .youtube .cross {
+        .main .cross {
             margin-bottom: 20px;
         }
 
@@ -858,7 +858,7 @@
             <div class="main">
                 <div class="youtube">
                     <h2>YOUTUBE</h2>
-                    <p>꿀팁 여기에 다 모아놨고~</p>
+                    <p>테스트</p>
                     <img class="cross" src="assets/img/site_main_cross.png" alt="">
                     <div class="youtube_cont">
                         <div class="youtube_cont_item_01">
@@ -886,7 +886,7 @@
                 </div>
                 <div class="notice">
                     <h2>YOUTUBE</h2>
-                    <p>꿀팁 여기에 다 모아놨고~</p>
+                    <p>테스트</p>
                     <img class="cross" src="assets/img/site_main_cross.png" alt="">
                     <div class="notice_desc_cont">
                         <div class="notice_quick_cont"></div>
