--- a/javascript/effect/sliderEffect.html
+++ b/javascript/effect/sliderEffect.html
@@ -21,11 +21,14 @@
     <main>
         <div class="intro_menu">
             <ul>
-                <li style="text-align:center; font-size:40px; border-bottom: 1px solid rgba(255, 255, 255, 0.447); margin-bottom: 20px; padding-bottom: 20px;">데이터이펙트</li>
+                <li style="text-align:center; font-size:40px; border-bottom: 1px solid rgba(255, 255, 255, 0.447); margin-bottom: 20px; padding-bottom: 20px;">슬라이더 이펙트</li>
                 <li>01. 슬라이드 이펙트 - 트랜지션 효과 <a href="sliderEffect01.html">GO</a></li>
                 <li>02. 슬라이드 이펙트 - 좌로 움직이기 <a href="sliderEffect02.html">GO</a></li>
                 <li>03. 슬라이드 이펙트 - 좌로 움직이기(연속적으로) <a href="sliderEffect03.html">GO</a></li>
-                <li>04. 슬라이드 이펙트 - 좌우로 움직이기 <a href="sliderEffect04.html">GO</a></li>
+                <li>04. 슬라이드 이펙트 - 이미지 슬라이드(버튼) <a href="sliderEffect04.html">GO</a></li>
+                <li>05. 슬라이드 이펙트 - 이미지 슬라이드(버튼, 닷 메뉴) <a href="sliderEffect05.html">GO</a></li>
+                <li>05. 슬라이드 이펙트 - 이미지 슬라이드(버튼, 닷 메뉴, 무한) <a href="sliderEffect06.html">GO</a></li>
+                <li>05. 슬라이드 이펙트 - 이미지 슬라이드(버튼, 닷 메뉴, 무한, 플레이 버튼, 정지 버튼, 자동 플레이) <a href="sliderEffect07.html">GO</a></li>
             </ul>
         </div>
     </main>
