--- a/javascript/effect/gameEffect01.html
+++ b/javascript/effect/gameEffect01.html
@@ -256,6 +256,7 @@
         </div>
     </div>
 
+    <!-- 소스보기 -->
     <div class="sourceCont">
         <div class="sourceCont_header">
             <p>SOURCE VIEW</p>
@@ -263,6 +264,7 @@
         </div>
         <iframe class="sourceOpen" src="https://github1s.com/kimsangjunv1/coding/blob/main/javascript/effect/gameEffect01.html" frameborder="0"></iframe>
     </div>
+
     <main id="main">
         <div class="icon_box">
             <div class="icon1">
@@ -371,6 +373,7 @@
         // } );
     </script>
     <script>
+        // 각 아이콘을 움직일 수 있게 Jquery 라이브러리 사용
         $(".icon1").draggable({
             drag: function () {
                 $(".mouse__cursor img").attr("src", "../../assets/img/mouseCursor.png")
