--- a/css/index.html
+++ b/css/index.html
@@ -874,6 +874,19 @@
                 filter: url("#filterSquiggle4");
             }
         }
+        .main__desc{
+            margin-top: 100px;
+        }
+        .main__title{
+            display: none;
+        }
+        .subContents > div{
+            display: none;
+        }
+        .subContents > div.active{
+            display: block;
+        }
+        
     </style>
 </head>
 
@@ -1000,13 +1013,13 @@
                     <ul>
                         <li class="active"><a href="#">Alphabet</a></li>
                         <li><a href="#">selector</a></li>
-                        <li><a href="#">flex</a></li>
+                        <!-- <li><a href="#">flex</a></li> -->
                     </ul>
                 </div>
                 <div class="subContents">
 
                     <!-- subCont1 -->
-                    <div class="subCont1">
+                    <div class="subCont1 active">
                         <div class="table">
                             <table>
                                 <colgroup>
