--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
           <!-- box -->
           <section class="color-shape refer">
-            <a href="html/index.html" target="_blank">
+            <a href="html/alphabet.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">HTML</span>
@@ -262,20 +262,20 @@
           <!-- //box -->
 
           <!-- box -->
-          <section class="color-shape layout">
-            <a href="layout/index.html" target="_blank">
+          <section class="color-shape site">
+            <a href="site/site1/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">LAYOUT</span>
-                  <span class="overlay-text-thumb-donut">LAYOUT</span>
-                  <span class="overlay-text-thumb1-donut">LAYOUT</span>
-                  <span class="overlay-text-thumb2-donut">LAYOUT</span>
+                  <span class="overlay-img-donut">SITE</span>
+                  <span class="overlay-text-thumb-donut">SITE</span>
+                  <span class="overlay-text-thumb1-donut">사이트 제작하기1</span>
+                  <span class="overlay-text-thumb2-donut">SITE</span>
                 </div>
-                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                <img src="assets/img/svg-soft-ice-cream.svg" alt="portfolio">
                 <div class="img-text donutImg">
-                  <h5>LAYOUT</h5>
-                  <p>LAYOUT</p>
-                  <span>LAYOUT</span>
+                  <h5>SITE</h5>
+                  <p>SITE</p>
+                  <span>SITE</span>
                 </div>
               </div>
             </a>
@@ -284,13 +284,34 @@
 
           <!-- box -->
           <section class="color-shape site">
-            <a href="site/index.html" target="_blank">
+            <a href="site/site2/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">SITE</span>
-                  <span class="overlay-text-thumb-donut">SITE</span>
-                  <span class="overlay-text-thumb1-donut">사이트 제작하기</span>
-                  <span class="overlay-text-thumb2-donut">SITE</span>
+                  <span class="overlay-img-donut">SITE 2</span>
+                  <span class="overlay-text-thumb-donut">SITE 2</span>
+                  <span class="overlay-text-thumb1-donut">사이트 제작하기2</span>
+                  <span class="overlay-text-thumb2-donut">SITE 2</span>
+                </div>
+                <img src="assets/img/svg-soft-ice-cream.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>SITE</h5>
+                  <p>SITE</p>
+                  <span>SITE</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape site">
+            <a href="site/site3/index.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">SITE 3</span>
+                  <span class="overlay-text-thumb-donut">SITE 3</span>
+                  <span class="overlay-text-thumb1-donut">사이트 제작하기3</span>
+                  <span class="overlay-text-thumb2-donut">SITE 3</span>
                 </div>
                 <img src="assets/img/svg-soft-ice-cream.svg" alt="portfolio">
                 <div class="img-text donutImg">
@@ -387,27 +408,7 @@
           </section>
           <!-- //box -->
 
-          <!-- box -->
-          <section class="color-shape script">
-            <a href="javascript/effect/quizEffect.html" target="_blank">
-              <div class="image-wrap">
-                <div class="hover-wrap">
-                  <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <span class="overlay-text-thumb-donut">Quiz</span>
-                  <span class="overlay-text-thumb1-donut">데이터 효과</span>
-                  <span class="overlay-text-thumb2-donut">SCRIPT</span>
-                </div>
-                <img src="assets/img/svg-carrot.svg" alt="portfolio">
-                <div class="img-text donutImg">
-                  <h5>Quiz</h5>
-                  <p>데이터 효과</p>
-                  <span>JAVASCRIPT</span>
-                </div>
-              </div>
-            </a>
-          </section>
-          <!-- //box -->
-
+          
           <!-- box -->
           <section class="color-shape script">
             <a href="javascript/effect/mouseEffect.html" target="_blank">
@@ -481,7 +482,7 @@
                   <span class="overlay-text-thumb1-donut">SVG</span>
                   <span class="overlay-text-thumb2-donut">SVG</span>
                 </div>
-                <img src="assets/img/svg-french-fries.svg" alt="portfolio">
+                <img src="assets/img/svg-popcorn.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>SVG</h5>
                   <p>SVG</p>
@@ -502,7 +503,7 @@
                   <span class="overlay-text-thumb1-donut">ANIMATION</span>
                   <span class="overlay-text-thumb2-donut">CSS</span>
                 </div>
-                <img src="assets/img/svg-french-fries.svg" alt="portfolio">
+                <img src="assets/img/svg-lemon.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>CSS</h5>
                   <p>ANIMATION</p>
@@ -535,7 +536,7 @@
           <!-- //box -->
 
           <!-- box -->
-          <section class="color-shape animation">
+          <!-- <section class="color-shape animation">
             <a href="sql/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
@@ -552,7 +553,7 @@
                 </div>
               </div>
             </a>
-          </section>
+          </section> -->
           <!-- //box -->
 
           <!-- box -->
