--- a/javascript/javascript08.html
+++ b/javascript/javascript08.html
@@ -41,7 +41,7 @@
                 <li><a href="javascript05.html">문자열 객체</a></li>
                 <li><a href="javascript06.html">배열 객체</a></li>
                 <li><a href="javascript07.html">수학 객체</a></li>
-                <li class="active"><a href="javascript08.html">숫자 객체</a></li>
+                <li class="active"><a href="javascript08.html">숫자/데이트 객체</a></li>
                 <li><a href="javascript09.html">브라우저 객체</a></li>
                 <li><a href="javascript10.html">요소 객체</a></li>
                 <li><a href="javascript11.html">이벤트 객체</a></li>
@@ -61,7 +61,53 @@
     <!-- //header -->
     <main id="main">
         <div class="container">
-            
+            <div class="main_menu">
+                <ul>
+                    <li><a href="#">01. 숫자 메서드 : Number.MAX_VALUE : JavaScript가 표현할 수 있는 제일 큰 양의 숫자 값을 나타냅니다.</a></li>
+                    <li><a href="#">01. 숫자 메서드 : Number.MIN_VALUE : 표현할 수 있는 제일 작은 양의 숫자 값을 나타냅니다.</a></li>
+                    <li><a href="#">01. 숫자 메서드 : Number.MAX_SAFE_INTEGER</a></li>
+                    <li><a href="#">01. 숫자 메서드 : Number.MIN_SAFE_INTEGER</a></li>
+                    <li><a href="#">01. 숫자 메서드 : Number.Nan</a></li>
+                    <li><a href="#">01. 숫자 메서드 : Number.isFinite</a></li>
+                    <li><a href="#">01. 숫자 메서드 : Number.isInteger</a></li>
+                    <li><a href="#">01. 숫자 메서드 : Number.isNan</a></li>
+                    <li><a href="#">01. 숫자 메서드 : Number.prototype.toFixed</a></li>
+                    <li><a href="#">01. 숫자 메서드 : Number.prototype.toPrecision</a></li>
+                    <li><a href="#">01. 숫자 메서드 : Number.prototype.toString</a></li>
+                </ul>
+                <br>
+                <ul>
+                    <li><a href="#">01. 데이트 메서드 : new Date()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.now()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.parse()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.UTC()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.getFullYear()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.setFullYear()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.getMonth()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.setMonth()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.getDate()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.setDate()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.getDay()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.setDay()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.getHours()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.setHours()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.getMinutes()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.setMinutes()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.getSeconds()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.setSeconds()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.getMilliSeconds()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.setMilliSeconds()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.getTime()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.setTime()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.getTimezoneOffset()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.setTimezoneOffset()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.toDateString()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.toTimeString()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.toISOString()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.toLocaleString()</a></li>
+                    <li><a href="#">01. 데이트 메서드 : Data.prototype.toLocaleTimeString()</a></li>
+                </ul>
+            </div>
         </div>
     </main>
     <!-- //main -->
